# one-liner-deploy

./: .gitignore  CMakeLists.txt  README.md  cleanup.sh  install_python.sh  main.cpp  main.go  main.py  oneliner.sh
playbook/: deploy_app.yml  install_dependencies.yml  site.yml
playbook/roles/deploy_app/tasks/: main.yml
playbook/roles/install_dependencies/tasks/: main.yml
